--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
+:root{
+    --colorFondoMain: #774A8E;
+    
+    --colorFondoHeader: #8E2F5C;
+    --colorTextoHeader: #D58EB0;
+
+    --colorFondoNav: #413075;
+    --colorTextoNav: #887BAF;
+
+    --colorFondoFooter: #592A71;
+    --colorTextoFooter: #9874AA;
+
+    --colorFondoVentana: #592A71;
+    --colorTextoVentana: #9874AA;
+    --colorBordeVentana: #9874AA;
+
+    --colorFondoBoton: #592A71;
+    --colorTextoBoton: #9874AA;
+
+    
+}
 
 * {
     margin: 0;
@@ -13,14 +34,14 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: var(--colorFondoHeader);
+    color: var(--colorTextoHeader);
     padding: 1.5rem;
     text-align: center;
 }
 
 nav {
-    background-color: #444;
+    background-color: var(--colorFondoNav);
     padding: 0.5rem;
 }
 
@@ -35,14 +56,14 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: var(--colorTextoNav);
     text-decoration: none;
     font-weight: bold;
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: var(--colorFondoFooter);
+    color: var(--colorTextoFooter);
     text-align: center;
     padding: 0.625rem;
     margin-top: auto;
@@ -51,102 +72,13 @@ footer {
 main {
     flex: 1;
     padding: 1.25rem;
-    background-color: #f4f4f4;
+    background-color: var(--colorFondoMain);
     display: flex;
     min-height: 100vh;
     margin: 0;
     flex-direction: column;
 }
 
-/* Contenedor principal de cartas */
-#contenedorCartas {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 200rem;
-    padding: 1rem;
-}
-/* Contenedor principal de vidas */
-#contenedorVidas{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 3rem;
-    min-height: 15rem;
-    width: 100%;
-
-}
-
-/* Contenedor principal de tiempo */
-#tiempo{
-    font-size: 4rem;
-    height: 5rem;
-    text-align: center;
-}
-
-/* Estilo individual de cada carta */
-.carta {
-    
-    margin: 0.5rem;
-    width: 7.5rem;
-    height: 11rem;
-    border-radius: 0.7rem;
-    border: #2c3e50 0.2rem solid;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #2c3e50;
-    transition:
-        transform 0.3s ease,
-        background-color 0.2s ease-in-out,
-        box-shadow 0.3s ease-out;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    animation: aparecer 0.3s ease-in-out; 
-}
-
-/* estilo al pasar el raton por encima*/
-.carta:hover {
-    transform: scale(1.15);
-    background-color: #f0f0f0;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-}
-
-/* Estilo de cada carta SELECIONADA/REVELADA */
-.carta.seleccionada {
-    background-color: cyan;
-    transform: scale(1.1); 
-}
-
-/* Estilo de cada carta COMPLETADA*/
-.carta.seleccionada.bloqueada{
-    border-color: yellow;
-    pointer-events: none;
-}
-
-/* Estilo de cada carta BLOQUEADA SIN COMPLETAR*/
-.carta.bloqueada{
-    border-color: red;
-    pointer-events: none;
-}
-
-/* Corazones de vidas */
-.vida{
-    height: 4rem;
-    margin: 1rem;
-    display: flex;
-    animation: balanceo ease-in-out 1s infinite alternate; 
-
-}
-
-.vida.borrar{
-
-    display: flex;
-    animation: rebote 0.8s ease-in;
-
-}
 
 /* https://youtu.be/r_PL0K2fGkY?feature=shared */
 /* Esta es la base para que se vea sin entorpecer al resto del DOM */
@@ -172,48 +104,30 @@ main {
 .ventana{
     display: flex;
     flex-direction: column;
-    background-color: #f0f0f0;
-    border: #2c3e50 0.2rem solid;
+    background-color: var(--colorFondoVentana);
+    border: var(--colorBordeVentana) 0.2rem solid;
+    color: var(--colorTextoVentana);
     padding: 1rem 2rem;
     text-align: center;
     width: 35rem;
     border-radius: 1rem;
+    
 }
 
+.ventana p{
+    margin-top: 1rem;
+}
+
+.ventana input{
+    margin-inline: 3rem;
+    height: 2rem;
+}
+.ventana button{
+    margin-inline: 30%;
+    margin-top: 1rem;
+    height: 2rem;
+}
 .alerta{
     color: red;
     font-weight: bold;
-}
-
-/* Animacon de aparecer */
-@keyframes aparecer {
-    0% {
-        transform: scale(0);
-        opacity: 0;}
-    
-    100% {
-        transform: scale(1);
-        opacity: 1;}
-}
-
-/* Animacionde Balanceo*/
-@keyframes balanceo {
-    0% {
-        rotate: -15deg;}
-    100% {
-        rotate: 15deg;}
-}
-
-@keyframes rebote {
-    0% {opacity: 1;
-        transform: translateY(0px);
-        }
-    15% {
-        transform: translateY(-1rem);
-        opacity: 1;}
-    100% {
-        transform: translateY(4rem);
-        opacity: 0}
-
-
 }
