--- a/stylesGame.css
+++ b/stylesGame.css
@@ -37,6 +37,7 @@
     height: 100%;
     border-radius: 0.7rem;
     border: #030B20 0.2rem solid;
+    background-color: #030B20;
     font-size: 1.5rem;
     font-weight: bold;
 
