Solucionado el fallo de que el temporizador avanza aunque le hayas dado a "reinciar" en un corto lapso de tiempo.

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ nav ul li p {
     color: var(--colorTextoNav);
     text-decoration: none;
     font-weight: bold;
-    
+    transition: color 0.3s;
 }
 
 footer {
