--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ main {
     background-repeat: repeat;
     background-size: 30rem;
     transition: background-image 0.3s;
+    align-items: center;
     
 }
 
@@ -208,6 +209,7 @@ main.light {
     color: var(--colorTextoVentana);
     padding: 1rem 2rem;
     text-align: center;
+    align-items: center;
     width: 35rem;
     border-radius: 1rem;
    
@@ -253,6 +255,33 @@ main.light {
     nav ul li {
         margin: 0.5rem 0;
     }
+}
+
+.ventana.final{
+    width: 70%;
+    flex: 1;
+    padding: 4rem;
+}
+
+.ventana.final h2{
+    font-size: 5rem;
+}
+
+.ventana.final h3{
+    padding-top: 1rem;
+    font-size: 3rem;
+}
+
+
+.ventana.final p{
+    font-size: 2rem;
+    padding-top: 0;
+    padding-bottom: 2rem;
+}
+
+.ventana.final button{
+    font-size: 2rem;
+    min-height: 6rem;
 }
 
 
