Ajuste de pantallas, cambio en opciones de juego, añadido el parametro y la posibilidad de abrir pestaña al finalizar el juego

--- a/styles.css
+++ b/styles.css
@@ -220,8 +220,12 @@ main.light {
     border: var(--colorBordeVentanaLight) 0.2rem solid;
     color: var(--colorTextoVentanaLight);
 }
-.ventana p{
+
+.ventana h3{
     margin-top: 1rem;
+}
+.ventana h2{
+    margin-bottom: 1rem;
 }
 
 .ventana input{
@@ -282,6 +286,12 @@ main.light {
 .ventana.final button{
     font-size: 2rem;
     min-height: 6rem;
+}
+
+.ventana div{
+    display: flex;
+    align-items: center;
+    text-align: left;
 }
 
 
